	13005 Angelic Wing Dagger:	NEED INFO.
	1308 Golden Axe:		NEED INFO.
	13160, 13161 Destroyer:	Can break target's armor when fired at close range.
	-----
	4296 Cramp Card:	Temp Plug: 10z per mob-level on a 3% chance.
	7458 Fortune Horn:	It's a custom name ^^;
	12017 Speed Decreasing Potion: A potion which decreases the moving speed of a character for a duration.
	-----

========================

01/21
	* Fixed equip location of Father's Mustaches and Father's Sunglasses [Lupus]
01/18
	* Fixed Ulle's Cap + Odin's Blessing Combo, thanks to happylight [Lupus]
01/06
	* Fixed Succubus/Incubus combo not doing regen correctly [ultramage]
	  Read why at http://www.eathena.ws/board/index.php?showtopic=129814
12/30
	* Fixed typo in mob_skill_db [Playtester]
12/28
	* Added some history books [Playtester]
12/27
	* Cleaned up item_misc.txt [Skotlex]
12/23
	* Fixed some autospell bonuses thanks to NLZ [Playtester]
12/21
	* Fixed Mutant Dragonoid Card [Playtester]
	* Updated Bows [Playtester]
	* Raised range of Gatling and Grenade Launcher to 9 [Playtester]
	* Updated two handed weapons [Playtester]
12/20
	* NPC_CHANGEUNDEAD is now "target" for all mobs [Playtester]
	- all other NPC_CHANGE skills stay "self"
	* Commented some items that seem to crash the kRO client [Playtester]
	* Made NPC_CHANGE self targetted for all mobs [Playtester]
	- it should either be self or target for all but not mixed up	
12/19
	* Now Peach Tree can move, Parasite can't [Playtester]
	- fixed up their AI
12/18
	* Fixed some swords [Playtester]
12/17
	* Fixed Owl Duke and Owl Baron losing boss mode on NPC_EMOTION [Playtester]
12/16
	* Updated some weapons and view ids [Playtester]
	* Fixed prices of arrows [Playtester]
	* Update remaining headgears [Playtester]
12/15
	* Reverted price of Mink Coat [Playtester]
	* Updated some more headgears [Playtester]
12/14
	* Added some new headgears [Playtester]
	* Updated various headgears [Playtester]
	* Capped Dex to 255 in the mob_db [Playtester]